--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,13 @@ Readable version available on https://jtama.github.io/refactoring-as-code/#/[Git
 [source,bash]
 ----
 jbang qrcode@xam.dk -i qr_inlay.png <open feedback url> --qr-colo="linear-gradient(90deg, rgba(36,14,0,1) 0%, rgba(9,121,105,1) 35%, rgba(0,212,255,1) 100%);"
-docker container run --rm -v $(pwd):/documents -w /documents asciidoctor/docker-asciidoctor:1.72 asciidoctor-revealjs -r asciidoctor-diagram index.adoc
+podman container run --rm -v $(pwd):/documents -w /documents asciidoctor/docker-asciidoctor:1.79 asciidoctor-revealjs -r asciidoctor-diagram index.adoc
 ----
 
+== Run locally
+
+[source,bash]
+----
+podman container run --rm -d -p 8080:80 -v $(pwd)/slides:/usr/share/nginx/html nginx
+----
 
