with a sample toxic jar and the start of a recipe

--- a/slides/02-catalogue.adoc
+++ b/slides/02-catalogue.adoc
@@ -1,8 +1,7 @@
 
-[.transparent]
 == Catalogue de recette
 
-image::catalog.jpg[background, size=cover]
+//image::catalog.jpg[background, size=cover]
 
 [%notitle,background-iframe="https://docs.openrewrite.org/recipes/java/testing/hamcrest"]
 === Partons à la découverte du catalogue
