--- a/slides/03-running-recipes.adoc
+++ b/slides/03-running-recipes.adoc
@@ -4,26 +4,26 @@
 
 image::running.avif[background, size=cover]
 
-
+[%notitle]
 === En modifiant vos poms (1/2)
 
-[source,xml,highlight="5..7|15..17|10",.fragment,step="0"]
+[source,xml,highlight="5..7|15..17|10",step=0]
 ----
 <project>
   <build>
     <plugins>
       <plugin>
-        <groupId>org.openrewrite.maven</groupId> <1>
+        <groupId>org.openrewrite.maven</groupId>
         <artifactId>rewrite-maven-plugin</artifactId>
         <version>5.46.0</version>
         <configuration>
           <activeRecipes>
-            <recipe>org.openrewrite.apache.httpclient5.StatusLine</recipe> <3>
+            <recipe>org.openrewrite.apache.httpclient5.StatusLine</recipe>
           </activeRecipes>
         </configuration>
         <dependencies>
           <dependency>
-            <groupId>org.openrewrite.recipe</groupId> <2>
+            <groupId>org.openrewrite.recipe</groupId>
             <artifactId>rewrite-apache</artifactId>
             <version>1.9.0</version>
           </dependency>
@@ -33,11 +33,14 @@ image::running.avif[background, size=cover]
   </build>
 </project>
 ----
-[%step]
-<1> Declare the plugin
-<2> Activate the recipe
-<3> Add the recipe dependency
+[.fragment, data-fragment-index=0]
+Declare the plugin
+[.fragment, data-fragment-index=1]
+Add the recipe dependency
+[.fragment, data-fragment-index=2]
+Activate the recipe
 
+[%notitle]
 === En modifiant vos poms (2/2)
 
 [source,bash,.fragment]
@@ -53,18 +56,20 @@ Pareil avec gradle
 === Sans modifier vos poms
 
 [.fragment]
-[source,bash,highlight="1|2..3|4..5"]
+[source,bash,highlight="1|2..3|4..5",step=0]
 ----
-mvn -U org.openrewrite.maven:rewrite-maven-plugin:run <1>
--Drewrite.activeRecipes=
-   org.openrewrite.java.testing.hamcrest.AssertThatBooleanToAssertJ <2>
+mvn -U org.openrewrite.maven:rewrite-maven-plugin:run
 -Drewrite.recipeArtifactCoordinates=
-   org.openrewrite.recipe:rewrite-testing-frameworks:RELEASE <3>
+   org.openrewrite.recipe:rewrite-testing-frameworks:RELEASE
+-Drewrite.activeRecipes=
+   org.openrewrite.java.testing.hamcrest.AssertThatBooleanToAssertJ
 ----
-[%step]
-<1> Declare the plugin
-<2> Activate the recipe
-<3> Add the recipe dependency
+[.fragment, data-fragment-index=0]
+Declare the plugin
+[.fragment, data-fragment-index=1]
+Add the recipe dependency
+[.fragment, data-fragment-index=2]
+Activate the recipe
 
 [.lesson]
 === !
