--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -1,10 +1,9 @@
-[.conclusion.transparency]]
-== !
+[.conclusion.transparency]
+== Point d'attention
 
-[.fragment.important-text]
---
-Openrewrite c'est le plus fort !
---
+- No a silver bullet
+- Composition de recettes complexes
+
 
 [.transparency]
 [.columns]
@@ -15,7 +14,7 @@ Openrewrite c'est le plus fort !
 [.important-text.has-text-left.vertical-align-middle]
 Le dépôt github :
 
-image:extension-demo-repo.png[width=400]
+image:qrcode_github.png[alt="https://github.com/jtama/openrewrite-refactor-as-code", width=400]
 --
 
 [.column]
@@ -24,5 +23,5 @@ image:extension-demo-repo.png[width=400]
 [.important-text.has-text-left.vertical-align-middle]
 Feedback :
 
-image:qrcode.png[width=400]
+image:qrcode_feedback.png[width=400]
 --
