--- a/slides/02-running-recipes.adoc
+++ b/slides/02-running-recipes.adoc
@@ -7,7 +7,7 @@ image::running.avif[background, size=cover]
 [%notitle]
 === En modifiant vos poms (1/2)
 
-[source,xml,highlight="5..7|15..17|10",step=0]
+[source%linenums,xml,highlight="5..7|15..17|10",step=0]
 ----
 <project>
   <build>
@@ -43,7 +43,7 @@ Activation des recettes
 [%notitle]
 === En modifiant vos poms (2/2)
 
-[source,console,.fragment]
+[source%linenums,console,.fragment]
 ----
 $ mvn rewrite:run
 ----
@@ -56,7 +56,7 @@ Pareil avec gradle
 === Sans modifier vos poms
 
 [.fragment]
-[source,console,highlight="1|2..3|4..5",step=0]
+[source%linenums,console,highlight="1|2..3|4..5",step=0]
 ----
 $ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
   -Drewrite.recipeArtifactCoordinates=\
