--- a/slides/03-declarative-recipes.adoc
+++ b/slides/03-declarative-recipes.adoc
@@ -12,7 +12,7 @@ Un recette déclaratice est en fait juste un format de déclaration de recette s
 [%notitle]
 === Et ça ressemble à ?
 
-[source,yaml,highlight="3|4..10|11..13|14..17|23..24|26..34"]
+[source%linenums,yaml,highlight="3|4..10|11..13|14..17|23..24|26..34"]
 ----
 ---
 type: specs.openrewrite.org/v1beta/recipe
@@ -77,7 +77,7 @@ Projet Maven ou Gradle...
 === Et on l'exécute comme ça
 
 [.fragment]
-[source,console,highlight="2..3|4..5"]
+[source%linenums,console,highlight="2..3|4..5"]
 ----
 $ mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
     -Drewrite.activeRecipes=\
