--- a/slides/03-declarative-recipes.adoc
+++ b/slides/03-declarative-recipes.adoc
@@ -12,7 +12,7 @@ Une recette déclarative est en fait juste un format de déclaration de recette 
 [%notitle]
 === Et ça ressemble à ?
 
-[source%linenums,yaml,highlight="3|4..10|11..13|14..17|23..24|26..34"]
+[source%linenums,yaml,highlight="3|4..10|12..19|20|23..24|29..35"]
 ----
 ---
 type: specs.openrewrite.org/v1beta/recipe
@@ -43,10 +43,10 @@ description: |
 tags:
   - acme
 preconditions:
-  - org.openrewrite.text.Find:
-      find: com.github.jtama.toxic
+  - org.openrewrite.java.search.FindTypes:
+      fullyQualifiedTypeName: com.github.jtama.toxic.FooBarUtils
 recipeList:
-  - com.github.jtama.openrewrite.RemoveFooBarUtilsIsEmpty
+  - com.github.jtama.openrewrite.RemoveFooBarUtilsIsEmptyRecipes
   - com.github.jtama.openrewrite.RemoveFooBarUtilsStringFormatted
   - com.github.jtama.openrewrite.UseObjectsCompare
 ----
@@ -92,6 +92,6 @@ Inclure ce fichier dans un module maven fantôme...
 [.lesson]
 === !
 
-- ✅ Connaître l'outil
+- ✅ Vue d'ensemble du véhicule
 - ✅ Savoir démarrer le véhicule
 - ✅ Savoir conduire en ville
