--- a/slides/04-catalogue.adoc
+++ b/slides/04-catalogue.adoc
@@ -23,7 +23,7 @@ Plus de 500 recettes la dernière fois que j'ai compté.
 [.lesson]
 === !
 
-- ✅ Connaître l'outil
+- ✅ Vue d'ensemble du véhicule
 - ✅ Savoir démarrer le véhicule
 - ✅ Savoir conduire en ville
 - ✅ Savoir lire une carte
