--- a/toxic-library-user/README.adoc
+++ b/toxic-library-user/README.adoc
@@ -2,5 +2,5 @@
 ----
 mvn -U org.openrewrite.maven:rewrite-maven-plugin:run \
 -Drewrite.recipeArtifactCoordinates=com.github.jtama:toxic-library-remover:1.0.1-SNAPSHOT \
--Drewrite.activeRecipes=org.acme.RemovesThatToxicDependency
+-Drewrite.activeRecipes=com.github.jtama.openrewrite.RemovesThatToxicDependency
 ----
