Better adapt to quickie format

--- a/slides/05-coding-recipes.adoc
+++ b/slides/05-coding-recipes.adoc
@@ -1,25 +1,11 @@
 
 == Ecrire sa propre recette
 
-Demo time !
+[.fragment]
+Ha hahahahahahaha hahaha haha hhahhaha.
 
-[%notitle,background-iframe="http://localhost:8443"]
-=== GO
-
-[.columns]
-=== !
-
-[.column.is-one-third]
+[.notes]
 --
-image::permis_de_refactoring.png[]
---
-
-[.column]
---
-- ✅ Vue d'ensemble du véhicule
-- ✅ Savoir lire une carte
-- ✅ Savoir démarrer le véhicule
-- ✅ Savoir conduire en ville
-- ✅ Savoir drifter sur la glace
+Pour le drift il va falloir attendre!
 --
 
