--- a/slides/intro.adoc
+++ b/slides/intro.adoc
@@ -67,3 +67,9 @@ onepoint BDX
 [.vertical-align-middle]
 icon:github[] @jtama image:avatar.png[width=100]
 --
+
+[%notitle]
+=== Le permis
+
+image::permis_de_refactoring.png[width=600]
+
