--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@ Readable version available on https://jtama.github.io/refactoring-as-code/#/[Git
 cd slides
 jbang qrcode@maxandersen -i images/qr_inlay.png <open feedback url> --qr-colo="linear-gradient(90deg, rgba(36,14,0,1) 0%, rgba(9,121,105,1) 35%, rgba(0,212,255,1) 100%);"
 jbang qrcode@maxandersen -i image/github.png https://github.com/jtama/openrewrite-refactoring-as-code --qr-colo="linear-gradient(90deg, rgba(36,14,0,1) 0%, rgba(9,121,105,1) 35%, rgba(0,212,255,1) 100%);"
-podman container run --rm -v $(pwd):/documents -w /documents asciidoctor/docker-asciidoctor:1.80.0 asciidoctor-revealjs -r asciidoctor-diagram index.adoc
+podman container run --rm -v $(pwd)/slides:/documents -w /documents asciidoctor/docker-asciidoctor:1.80.0 asciidoctor-revealjs -r asciidoctor-diagram index.adoc
 ----
 
 === Run locally
@@ -18,6 +18,7 @@ podman container run --rm -v $(pwd):/documents -w /documents asciidoctor/docker-
 [source%linenums,bash]
 ----
 podman container run --name prez --rm -d -p 8080:80 -v $(pwd)/slides:/usr/share/nginx/html nginx
+podman container run --name coder --rm -d -p 8443:8443 -v $(pwd)/app:/config/workspace ghcr.io/jtama/java_jbang_codeserver:latest
 ----
 
 == `toxic-library`
