--- a/slides/01-openrewrite.adoc
+++ b/slides/01-openrewrite.adoc
@@ -82,7 +82,16 @@ public abstract class Recipe implements Cloneable {
 Des résultats sous forme de _data tables_, et le concept de préconditions.
 --
 
-[.lesson]
+[.columns]
 === !
 
+[.column.is-one-third]
+--
+image::permis_de_refactoring.png[]
+--
+
+[.column]
+--
 ✅ Vue d'ensemble du véhicule
+--
+
