--- a/slides/index.adoc
+++ b/slides/index.adoc
@@ -11,9 +11,8 @@
 :revealjs_pdfseparatefragments: false
 :revealjs_width: 1200
 :title-slide-background-image: title.png
-:title-slide-background-size: contain
+:title-slide-background-size: cover
 :title-slide-background-repeat: no-repeat
-:title-slide-background-color: #FFFFFF
 :title-slide-filter: blur(4px)
 :customcss: css/meetup.css
 :imagesdir: images
