--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ Readable version available on https://jtama.github.io/refactoring-as-code/#/[Git
 [source%linenums,bash]
 ----
 cd slides
-jbang qrcode@maxandersen -i images/qr_inlay.png <open feedback url> --qr-colo="linear-gradient(90deg, rgba(36,14,0,1) 0%, rgba(9,121,105,1) 35%, rgba(0,212,255,1) 100%);"
+jbang qrcode@maxandersen -i images/feedback.png https://openfeedback.io/debug-refacto-pattern-matching-level-up-ton-code-java/0/Jc68GIfKguprKWCMna9E -o images/qrcode_feedback.png -d 120:120
 jbang qrcode@maxandersen -i image/github.png https://github.com/jtama/openrewrite-refactoring-as-code --qr-colo="linear-gradient(90deg, rgba(36,14,0,1) 0%, rgba(9,121,105,1) 35%, rgba(0,212,255,1) 100%);"
 podman container run --rm -v $(pwd)/slides:/documents -w /documents asciidoctor/docker-asciidoctor:1.80.0 asciidoctor-revealjs -r asciidoctor-diagram index.adoc
 ----
