--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -6,6 +6,7 @@ image::conclusion.jpg[background, size=cover]
 [%step]
 - Quand on n'a qu'un marteau tout ressemble à un clou.
 - Composition de recettes complexes.
+- _java preview feature_
 
 
 [.transparency]
