--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -1,7 +1,9 @@
 [.transparency]
-== Point d'attention
+== Points d'attention
 
 image::conclusion.jpg[background, size=cover]
+
+=== %
 
 [%step]
 - Quand on n'a qu'un marteau tout ressemble à un clou.
