--- a/slides/outro.adoc
+++ b/slides/outro.adoc
@@ -1,4 +1,4 @@
-[.transparency]
+[.transparency.no-transition]
 == Points d'attention
 
 image::conclusion.jpg[background, size=cover]
@@ -11,8 +11,7 @@ image::conclusion.jpg[background, size=cover]
 - _java preview feature_
 
 
-[.transparency]
-[.columns]
+[.transparency.columns.no-transition]
 === Merci !
 
 [.column]
